@@ -320,7 +320,6 @@ struct subprocess_data {
 static void
 subprocess_launcher(int id, void *data)
 {
-    int count;
     int ac = 8;
     char *line = (char *)bu_calloc(MAXPATHLEN+501, sizeof(char), "resultstr");
     const char *av[9];
@@ -350,7 +349,7 @@ subprocess_launcher(int id, void *data)
     bu_process_create(&p, (const char **)av, BU_PROCESS_DEFAULT);
     bu_vls_printf(sd->sd_result, "Test %ld(process %ld): running...\n", sd->test_num, sd->process_num);
 
-    while (bu_process_read((char *)line, &count, p, BU_PROCESS_STDERR, MAXPATHLEN+501) > 0) {
+    while (bu_process_read_n(p, BU_PROCESS_STDERR, MAXPATHLEN+501, (char *)line) > 0) {
 	bu_vls_printf(sd->sd_result, "%s\n", line);
 	memset(line, 0, MAXPATHLEN+501);
     }
