@@ -134,6 +134,7 @@ removed at any time.
 include/bu/process.h
 	bu_process_exec: replaced by bu_process_create
 	bu_process_wait: replaced by bu_process_wait_n
+	bu_process_read: replaced by bu_process_read_n
 
 7.38
 ----
